--- a/TriBalanceDemo.html
+++ b/TriBalanceDemo.html
@@ -102,19 +102,34 @@
     TriBalance Diagrams
 </h1>
     <p>
-    This is an explanation of what may be a new graphical user interface element---the "tri-balance" diagram. 
+    This is an explanation of what may be a new graphical user interface element---the "tri-balance" diagram. The purpose is to use a
+triangle to enter three values such as "Mind/Body/Sprit" or "Strength/Endurance/Flexibility" that are presumed to in some sense
+be "in balance" or where it is interesting if they are in balance. 
     </p>
     <p>
     This is an <a href="https://github.com/PubInv/TriBalance">open source demonstration project</a> of <a href="https://pubinv.github.io/PubInv/">Public Invention</a>. This grew out of the project <a href="https://github.com/PubInv/https://github.com/PubInv/SocialTetrahedrons">open source demonstration project</a>.
     Altough I searched a good bit, I may have missed a previous implementation if the tri-balance diagram has been implmented previously please inform me at &lt;read.robert@gmail.com&gt;.
   </p>
-  <h2>Usage</h2>
-    These three
-  coordinates are considered "balanced", that is, the position on the triangle specifies them with a
-  particular algorithm. The closer to one corner of the triangle you are, the more strongly you reflect that
+    <h2>Usage</h2>
+Click near the yellow triangle and are red dot will appear within the triangle and will determine three values. These three values
+will either sum to 100% or the square of the square roots will sum to 100%. 
+The closer to one corner of the triangle you are, the more strongly you reflect that
   attribute. The center of the trinagle reflects all attributes equally--that is, "perfect balance."
   The weights of these attributes will be recorded with your assertion, and displayed (temporarily) below the
-  triangle.
+triangle.
+    <h2>Purpose</h2>
+    <p>
+    Clicking on the triangle gives you a two-dimensional specification. In some cases, that may be all you need.
+    </p>
+    <p>
+    However, if you want to execute some algorithm to determine, for example, which of two points has the higher "mind" value,
+then calculating a 3-dimensional "balance vector" from the 2-dimensions makes more sense. It is only possible to specify three values
+from a two-dimensional coordinate by assuming the values are in some sense balance and not completely independent of each other.
+    </p>
+    <p> Additionally, to be useful, the function that produces the "balance vector" from a point on the triangle must have an inverse.
+    That is, there must exist code which when given a "balance vector" and the shape of a triangle as input, computes the coordinates
+gives you back the same point you started with. This allows you to, for example, store balance vectors in a database and reconstuct
+points on the GUI  at will. Moving back and forth between the model and the view is essential.
   <h2>L1 Norm vs. L2 Norm</h2>
   <p>
     To be able to write algorithms about the similarity or complimentarity of,
@@ -134,7 +149,32 @@
     However, it is also reasonable to use the L2 Norm, which is the "Euclidean distance." This is rather like saying every vector is a point on the surface
     of sphere of radius 1.0.  The components of the L2 Norm will sum to something
     usually greater than 1.0.
-  </p>
+    </p>
+    <h2> Basic Geometric Algorithm</h2>
+    The basic geometric algorithm to compute the three values from a point on the triangle is straightforward:
+    <ol>
+    <li>If the point is the exact center of the triangle, return a perfectly balanced vector.
+    </li>
+    <li> Find the point E where the line from the center of the triangle through the point intersects a triangle edge. Such a point must exists, and is on one edge or the intersection of two edges. Imagine a ray from the origin through point P to point E. The point E is along the ray OP and length is at most the distance from the origin to the edge along this ray (to keep the point inside the triangle.)
+</li>
+    <li>
+    Compute the lengte from P to E, and the total length from O to P.
+    </li>
+    <li> Determine the ratio (p_to_edge) of PE to OP. If this is close to zero, we are close to perfectly balanced; if it is close to 1, we are close to having zero for one attribute.
+    </li>
+    <li>
+    Compute the a balanced vector BAL  with all values the same, scaled by the ratio to the p_to_edge. 
+    </li>
+    <li>
+    Compute the imbalanced vector IMB scaled (1-p_to_edge).
+    </li>
+    <li>
+    Return the sum of BAL and IMB.
+    </li>
+    </ol>
+    <h2> The Inverse Function</h2>
+    <p> The inverse function reverses this action. 
+    
   <h2>License</h2>
   You are free to reuse this software under the terms
   of the GNU General Public License.
@@ -179,7 +219,10 @@ function get_world_triangle() {
      let wtc = [[-SIDE_LENGTH_PIXEL/2,BASE],
                              [SIDE_LENGTH_PIXEL/2,BASE],
                 [0,BASE+SIDE_LENGTH_HEIGHT]];
-    return wtc;
+    let wtc_vector = [new THREE.Vector2(wtc[0][0],wtc[0][1]),
+               new THREE.Vector2(wtc[1][0],wtc[1][1]),
+               new THREE.Vector2(wtc[2][0],wtc[2][1])];
+    return wtc_vector;
 }
 
 
@@ -209,9 +252,9 @@ function render_svg() {
 
     let wtc = WORLD_TRIANGLE_COORDS;
 
-    var array = [ [ vpw(W,wtc[0][0]),vph(H,wtc[0][1]) ], 
-                  [ vpw(W,wtc[1][0]),vph(H,wtc[1][1]) ],
-                  [ vpw(W,wtc[2][0]),vph(H,wtc[2][1]) ] ];
+    var array = [ [ vpw(W,wtc[0].x),vph(H,wtc[0].y) ], 
+                  [ vpw(W,wtc[1].x),vph(H,wtc[1].y) ],
+                  [ vpw(W,wtc[2].x),vph(H,wtc[2].y) ] ];
     
     for (value of array) {
         var point = svg.createSVGPoint();
